--- a/Mid assignment/ShoppingCartMVC/Ch24ShoppingCartMVC/Views/Cart/List.cshtml
+++ b/Mid assignment/ShoppingCartMVC/Ch24ShoppingCartMVC/Views/Cart/List.cshtml
@@ -6,7 +6,7 @@
     <link href="~/Content/Cart.css" rel="stylesheet" />
 }
 <h2>Your Shopping Cart</h2>
-@if (Model.Cart==null)
+@if (Model.Cart==null || !Model.Cart.Any())
 {
     <p>Nothing in your cart yet.</p>
 }
