--- a/Mid assignment/ShoppingCartMVC-Fianl/ShoppingCartMVC/Ch24ShoppingCartMVC/Content/Main.css
+++ b/Mid assignment/ShoppingCartMVC-Fianl/ShoppingCartMVC/Ch24ShoppingCartMVC/Content/Main.css
@@ -5,7 +5,7 @@
 body {
     font-family: Arial, Helvetica, Sans-Serif;
     font-size: 85%;
-    width: 700px;
+    width: 100%;
    
     margin: 0 auto;
     padding: 10px;
