--- a/Mid assignment/ShoppingCartMVC-Fianl/ShoppingCartMVC/Ch24ShoppingCartMVC/Content/Main.css
+++ b/Mid assignment/ShoppingCartMVC-Fianl/ShoppingCartMVC/Ch24ShoppingCartMVC/Content/Main.css
@@ -5,7 +5,7 @@
 body {
     font-family: Arial, Helvetica, Sans-Serif;
     font-size: 85%;
-    width: 100%;
+    width: 80%;
    
     margin: 0 auto;
     padding: 10px;
@@ -33,7 +33,7 @@ footer {
     text-align: center;
 }
 ul {
-    list-style: none;
+    list-style-type: none;
     margin: 2em 0;
     margin-left: 1em;
 }
