--- a/Mid assignment/ShoppingCartMVC-Fianl/ShoppingCartMVC/Ch24ShoppingCartMVC/Content/Order.css
+++ b/Mid assignment/ShoppingCartMVC-Fianl/ShoppingCartMVC/Ch24ShoppingCartMVC/Content/Order.css
@@ -1,11 +1,14 @@
-﻿#ddlProducts {
+﻿﻿#ddlProducts {
     width: 15em;
 }
+
+
 #productData {
     padding: 1em 0;
     width: 325px;
     float: left;
 }
+
 #imgProduct {
     float: left;
     height: 200px;
@@ -17,22 +20,28 @@
     font-size: 125%;
     font-weight: bold;
 }
+
 #lblName, #lblShortDescription, #lblLongDescription {
     display: block;
     margin-bottom: 1em;
 }
+
 #lblLongDescription {
     margin-bottom: 2em;
 }
+
 #lblUnitPrice {
     margin-bottom: 2em;
 }
+
 #txtQuantity {
     width: 5em;
 }
+
 #btnAdd {
     margin: 1em 0 0;
 }
+
 select {
     margin: .5em;
 }
