--- a/Mid assignment/ShoppingCartMVC-Fianl/ShoppingCartMVC/Ch24ShoppingCartMVC/Views/Cart/List.cshtml
+++ b/Mid assignment/ShoppingCartMVC-Fianl/ShoppingCartMVC/Ch24ShoppingCartMVC/Views/Cart/List.cshtml
@@ -6,13 +6,20 @@
 <h2>Your Shopping Cart</h2>
 @if (Model.Cart == null || !Model.Cart.Any())
 {
-<p>Nothing in your cart yet.</p> }
-            else
-            {
+<p>Please select products from order page, nothing selected !</p> }
+else
+{
 <select multiple="multiple">
     @foreach (var item in @Model.Cart)
     {
-<option>@item.Display()</option>}
+<option>@item.Display()</option>
+}
 </select>
-                <br />}
+                <br />
+}
+@using (Html.BeginForm("Index", "Checkout", FormMethod.Post))
+{
 
+<input type="submit" id="btnAdd" value="Checkout" />
+<input type="submit" id="btnRemove" value="Empty Cart" />
+}
