--- a/Mid assignment/ShoppingCartMVC-Fianl/ShoppingCartMVC/Ch24ShoppingCartMVC/Views/Cart/List.cshtml
+++ b/Mid assignment/ShoppingCartMVC-Fianl/ShoppingCartMVC/Ch24ShoppingCartMVC/Views/Cart/List.cshtml
@@ -21,5 +21,5 @@ else
 {
 
 <input type="submit" id="btnAdd" value="Checkout" />
-<input type="submit" id="btnRemove" value="Empty Cart" />
+@*<input type="submit" id="btnRemove" value="Empty Cart" />*@
 }
