--- a/Mid assignment/ShoppingCartMVC-Fianl/ShoppingCartMVC/Ch24ShoppingCartMVC/Views/Checkout/List.cshtml
+++ b/Mid assignment/ShoppingCartMVC-Fianl/ShoppingCartMVC/Ch24ShoppingCartMVC/Views/Checkout/List.cshtml
@@ -85,7 +85,8 @@ else
                      new List<Object>{
                      new { value = "Select Card", text = "Select Card"},
                       new { value = "VISA" , text = "VISA"  },
-                      new { value = "MasterCard" , text = "MasterCard" }
+                      new { value = "MasterCard" , text = "MasterCard" },
+                      new { value = "PayPal" , text = "PayPal" }
                    },
                  "value",
                  "text",
