--- a/Class works/IMS EF6 DB First/Views/Product/Edit.cshtml
+++ b/Class works/IMS EF6 DB First/Views/Product/Edit.cshtml
@@ -1,25 +1,53 @@
 ﻿@model IMS_EF6_DB_First.Models.Product
 
+@{
+    ViewBag.Title = "Edit";
+}
+
+<h2>Edit</h2>
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    
+    <div class="form-horizontal">
+        <h4>Product</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.ProductId)
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ProductName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ProductName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ProductName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ProductPrice, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ProductPrice, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ProductPrice, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.CatagoryId, "CatagoryId", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("CatagoryId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CatagoryId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+}
+
 <div>
-    <form method="post">
-        <table>
-            <tr>
-                <td>product name </td>
-
-                <td> <input type="text" name="productName" value="@Model.ProductName"></td>
-            </tr>
-            <tr>
-                <td> product price </td>
-
-                <td><input type="text" name="productPrice" value="@Model.ProductPrice"> </td>
-            </tr>
-            <tr>
-                <td> catagory Id </td>
-
-                <td><input type="text" name="catagoryId" value="@Model.CatagoryId"> </td>
-            </tr>
-        </table>
-        <input type="submit" value="Save">
-    </form>
-
+    @Html.ActionLink("Back to List", "Index")
 </div>
